# co-mathematician

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  README.md  README.zh-CN.md  pyproject.toml
.agents/skills/co-mathematician/: SKILL.md
.agents/skills/co-mathematician/assets/: goals_template.yaml  project_template.md  report_template.md  reviewer_output_schema.json  workstream_template.md
.cursor/rules/: co-mathematician.mdc
agents/: README.md
harness/co_math/: __init__.py  cli.py  schemas.py  skill_handoff.py  skills.py  workspace.py
harness/tests/: test_skill_handoff.py  test_skill_registry.py  test_workspace.py
workspace/final/: working_paper.md
workspace/project/: GOALS.yaml  PROJECT.md  PROJECT_STATUS.md
workspace/workstreams/WS-G1-001-pdhg-douglas-rachford/: WORKSTREAM.md  notes.md  plan.md  report.md  status.yaml
workspace/workstreams/WS-G1-001-pdhg-douglas-rachford/reviews/: review_01.json
workspace/workstreams/WS-G2-001-workstream/: WORKSTREAM.md  notes.md  report.md  status.yaml
workspace/workstreams/WS-G2-001-workstream/reviews/: review_01.json
workspace/workstreams/WS-G3-001-workstream/: WORKSTREAM.md  plan.md  report.md  status.yaml
workspace/workstreams/WS-G4-001-workstream/: WORKSTREAM.md  report.md  status.yaml
