[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "co-mathematician-workspace"
version = "0.1.0"
description = "Lightweight harness for a coding-agent-driven AI Co-Mathematician workspace."
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
co-math = "harness.co_math.cli:main"

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.pytest.ini_options]
testpaths = ["harness/tests"]
